k8s-angle/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-web
  namespace: odoo
spec:
  selector:
    matchLabels:
      app: odoo-web
  template:
    metadata:
      labels:
        app: odoo-web
    spec:
      # imagePullSecrets:
      #   - name: "????"
      containers:
        - name: odoo-web
          image: "192.168.1.101:5000/odoo"
          imagePullPolicy: Always
          volumeMounts:
            - name: vol-odoo
              mountPath: /var/lib/odoo
            - name: vol-conf
              mountPath: "/opt/odoo/custom/conf.d/"
              readOnly: true
      volumes:
        - name: vol-odoo
          persistentVolumeClaim:
            claimName: odoo-pvc
        - name: vol-conf
          configMap:
            name: odoo-conf
            items:
              - key: "web"
                path: "61-web.conf"
