k8s-angle/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: odoo-web-service
  namespace: odoo
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8069
      protocol: TCP
      targetPort: 8069
    - name: longpolling
      protocol: TCP
      port: 8072
      targetPort: 8072
  selector:
    app: odoo-web
